--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   background-color:  #f2f5fa;
-  color: #ffffff;
+  color: #0b2a66;
   padding: 12px 30px;
   position: fixed; /* fija en la parte superior */
   top: 0;
@@ -37,7 +37,7 @@
 
 .navbar-links a {
   margin: 0 10px;
-  color: #ffffff;
+  color: #0b2a66;
   text-decoration: none;
   font-weight: 500;
 }
