--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -5,7 +5,7 @@
   background-color:  #f2f5fa;
   color: #0b2a66;
   padding: 12px 30px;
-  position: fixed; /* fija en la parte superior */
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
